Fix tutorial spacing (#3439)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -689,7 +689,6 @@ END MARKETING CSS
 
 .hover-card.tutorial {
   background-color: white;
-  padding: 10px;
   margin: 1rem 0.8rem 1rem 0.2rem;
 }
 
